--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.nav_container {
+  display: flex;
+  align-items: center;
+  border: 2px solid #282c34;
+  align-content: center;
+  height: 200px;
+  width: 200px;
+  margin-top: 10px;
+}
+
+/* .App-body{
+  background-color:#C5C6C7;
+  background-size: cover;
+  
+  
+
+} */
+.left{
+  display: inline;
+
+}
+.center{
+  display: inline;
+}
+.right{
+  display: inline;
+}
+
