--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,10 @@ code {
   display: flex;
   align-items: center;
   border: 2px solid #282c34;
+  background-color:aquamarine;
   align-content: center;
-  height: 200px;
-  width: 200px;
+  height: 100px;
+  width: 100%;
   margin-top: 30px;
 }
 
@@ -44,4 +45,7 @@ body{
 .align-center{
   text-align: center;
 }
-
+a{
+  text-decoration: none;
+  color: black;
+}
